--- a/pkg/admin/gui/front-end/html/partner_authentication_page.html
+++ b/pkg/admin/gui/front-end/html/partner_authentication_page.html
@@ -12,6 +12,7 @@
 {{ end }}
 
 {{ define "content" }}
+  {{ if contains .myPermission.Partners "r" }}
     {{ if .errMsg }}
         <div id="errorPopup" class="alert alert-danger alert-dismissible fade show" role="alert">
             {{ .errMsg }}
@@ -241,8 +242,12 @@
           </ul>
         </form>
       {{ end }}
-    {{ else }}
     {{ end }}
+  {{ else if not (contains .myPermission.Partners "r") }}
+    <div class="d-flex align-items-center justify-content-between">
+      <h2 class="mb-0">{{ index .tab "accesRight" }} </h2>
+    </div>
+  {{ end }}
 {{ end }}
 
 {{ define "partner_authentication_page" }}
