--- a/pkg/admin/gui/front-end/html/partner_management_page.html
+++ b/pkg/admin/gui/front-end/html/partner_management_page.html
@@ -10,6 +10,7 @@
 {{ end }}
 
 {{ define "content" }}
+  {{ if contains .myPermission.Partners "r" }}
     {{ if .errMsg }}
         <div id="errorPopup" class="alert alert-danger alert-dismissible fade show" role="alert">
             {{ .errMsg }}
@@ -310,6 +311,11 @@
           </ul>
         </form>
     {{ end }}
+  {{ else if not (contains .myPermission.Partners "r") }}
+    <div class="d-flex align-items-center justify-content-between">
+      <h2 class="mb-0">{{ index .tab "accesRight" }} </h2>
+    </div>
+  {{ end }}
 {{ end }}
 
 {{ define "partner_management_page" }}
