--- a/pkg/admin/gui/front-end/html/remote_account_management_page.html
+++ b/pkg/admin/gui/front-end/html/remote_account_management_page.html
@@ -9,6 +9,7 @@
 {{ end }}
 
 {{ define "content" }}
+  {{ if contains .myPermission.Partners "r" }}
     {{ if .errMsg }}
         <div id="errorPopup" class="alert alert-danger alert-dismissible fade show" role="alert">
             {{ .errMsg }}
@@ -175,6 +176,11 @@
     {{ else }}
       <div class="alert alert-warning mt-4">{{ index .tab "partnerAuthenticationNotFound" }}</div>
     {{ end }}
+  {{ else if not (contains .myPermission.Partners "r") }}
+    <div class="d-flex align-items-center justify-content-between">
+      <h2 class="mb-0">{{ index .tab "accesRight" }} </h2>
+    </div>
+  {{ end }}
 {{ end }}
 
 {{ define "remote_account_management_page" }}
