--- a/pkg/admin/gui/front-end/html/tasks_transfer_rules_page.html
+++ b/pkg/admin/gui/front-end/html/tasks_transfer_rules_page.html
@@ -1200,6 +1200,7 @@
 {{ end }}
 
 {{ define "content" }}
+  {{ if contains .myPermission.Rules "r" }}
   {{ if .errMsg }}
     <div id="errorPopup" class="alert alert-danger alert-dismissible fade show" role="alert">
       {{ .errMsg }}
@@ -1245,6 +1246,11 @@
         </div>
     </div>
     {{ end }}
+  {{ else if not (contains .myPermission.Rules "r") }}
+    <div class="d-flex align-items-center justify-content-between">
+      <h2 class="mb-0">{{ index .tab "accesRight" }} </h2>
+    </div>
+  {{ end }}
 {{ end }}
 
 {{ define "tasks_transfer_rules_page" }}
